--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </section>
 
     <section class="carrusel-container" data-aos="zoom-in-up">
-        <h2>🌼 Momentos Contigo 🌼</h2>
+        <h2>🌼 Momentos Tuyos 🌼</h2>
         <div class="carrusel-wrapper">
             <button class="btn-carrusel left" onclick="moverCarrusel(-1)">❮</button>
             <div class="carrusel" id="carrusel">
