--- a/index.html
+++ b/index.html
@@ -21,16 +21,21 @@
     <section class="mensaje" data-aos="fade-up">
         <h2>Gracias por ser como eres 🌟</h2>
         <p>
-            Querida tía, gracias por ser un rayo de luz en la vida de todos los que te rodean. Tu manera de cuidar los
-            detalles, de estar presente con una palabra amable o un gesto generoso, nos llena el corazón. Siempre estás
-            pensando en los demás, demostrando una calidez humana que no se encuentra fácilmente. Nos inspiras con tu
-            dulzura, tu sabiduría y esa fuerza silenciosa con la que enfrentas la vida. <br><br>
-            Cada pequeño acto tuyo —desde una sonrisa inesperada hasta una ayuda silenciosa— habla del gran corazón que
-            tienes. Esta página es solo un pequeño reflejo del cariño que sentimos por ti. Gracias por tu forma de ser,
-            por escuchar con atención, por estar siempre cuando te necesitamos, y por tener ese toque especial que hace
-            sentir a cualquiera como en casa. <br><br>
-            Te queremos más de lo que las palabras pueden decir. Este regalo es solo una muestra de nuestra gratitud por
-            ser tan detallista, tan atenta y tan tú. 💖
+            Querida Gloria,
+
+            Hoy quiero tomar un momento para darte las gracias desde el corazón. Eres una persona verdaderamente
+            especial, de esas que marcan la vida de quienes tienen la dicha de conocerte. Gracias por tu forma tan
+            generosa de dar, por esos detalles que siempre tienes con los demás, y por el cariño con el que cuidas a los
+            tuyos.
+
+            Tu entrega, tu esfuerzo diario y tu incansable dedicación son admirables. Has luchado con valentía por el
+            bienestar de tu familia, siempre priorizando a los demás por encima de ti misma, sin esperar nada a cambio.
+            Esa fuerza tuya, esa ternura mezclada con determinación, es un ejemplo poderoso de amor y compromiso.
+
+            Gracias por ser tan trabajadora, tan atenta y tan humana. Personas como tú hacen del mundo un lugar mejor.
+            Que nunca te falte el reconocimiento, el cariño y la paz que mereces.
+
+            Con gratitud y admiración,
         </p>
     </section>
 
